[gd_scene load_steps=7 format=3 uid="uid://dw1b2jt8hpyle"]

[ext_resource type="Script" path="res://objects/toilet1.gd" id="1_ul1a5"]
[ext_resource type="Texture2D" uid="uid://cwfek0bwmrwvx" path="res://graphics/obstacles.svg" id="1_xeiah"]

[sub_resource type="Animation" id="Animation_hy5sn"]
resource_name = "busy"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteClean:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1)]
}

[sub_resource type="Animation" id="Animation_4kqja"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteClean:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_whhs1"]
_data = {
"RESET": SubResource("Animation_4kqja"),
"busy": SubResource("Animation_hy5sn")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b5n08"]
radius = 117.004

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource("1_ul1a5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(101, -7, 3, 53, -99, 17, -99, -48, 101, -50)

[node name="SpriteClean" type="Sprite2D" parent="."]
position = Vector2(0, -95)
texture = ExtResource("1_xeiah")
region_enabled = true
region_rect = Rect2(15.3088, 414.138, 207.756, 312.439)

[node name="SpriteDirty" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -95)
texture = ExtResource("1_xeiah")
region_enabled = true
region_rect = Rect2(226.286, 422.191, 206.145, 315.66)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_whhs1")
}

[node name="BusyTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, -18)
shape = SubResource("CircleShape2D_b5n08")

[connection signal="timeout" from="BusyTimer" to="." method="_on_busy_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
